# Shadertoy

./: .gitignore  CMakeLists.txt  README.md  Shadertoy.sln  Shadertoy.vcxproj  Shadertoy.vcxproj.filters  default.frag  default.vert  main.cpp  shaderClass.cpp  shaderClass.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Shaders/: default.frag  default.vert  shaderClass.h
